--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -37,7 +37,11 @@ h1 {
     border-radius: 5px;
 }
 
-.form-check-input:checked:focus{
+tr:hover {
+    background-color: lightgrey;
+}
+
+/* .form-check-input:checked:focus{
     background-color: darkcyan !important;
     box-shadow: 0 0 0 1px darkcyan, 0 0 0 0.2rem rgba(0, 255, 0, 0.25) !important;
 }
@@ -55,4 +59,4 @@ h1 {
 
 .form-check-input:checked{
     background-color: darkcyan !important;
-}
+} */
